--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "node": ">= 14"
   },
   "scripts": {
+    "stylelint": "stylelint ./public/styles.css",
+    "eslint": "eslint ./src",
     "dev": "nodemon ./src/app.js",
-    "test": "eslint ./src",
+    "test": "concurrently npm:eslint npm:stylelint",
     "start": "node ./src/app.js",
     "setup": "node ./src/setup.js"
   },
@@ -34,6 +36,8 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "faker": "^5.4.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "stylelint": "^13.11.0",
+    "stylelint-config-standard": "^20.0.0"
   }
 }
